# Xtreamly_Canister

./: .gitignore  Cargo.toml  README.md  build.sh  change_network.sh  clean_build.sh  dfx.json  generate_docs.sh  test.py  test.sh
docs/: crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/Xtreamly_Canister_backend/: all.html  fn.create_new_proxy_account.html  fn.create_vc_self_presented.html  fn.execute_script.html  fn.get_vc.html  fn.present_did_address.html  fn.remove_proxy_account.html  index.html  sidebar-items.js
docs/aes/: struct.Aes128.html  struct.Aes128Dec.html  struct.Aes128Enc.html  struct.Aes192.html  struct.Aes192Dec.html  struct.Aes192Enc.html  struct.Aes256.html  struct.Aes256Dec.html  struct.Aes256Enc.html
docs/ahash/: struct.AHashMap.html  struct.AHashSet.html
docs/beef/: all.html  index.html  type.Cow.html
docs/binread/: all.html  attr.derive_binread.html  derive.BinRead.html  enum.Endian.html  enum.Error.html  fn.count.html  fn.until.html  fn.until_eof.html  fn.until_exclusive.html  index.html  struct.FilePtr.html  struct.NullString.html  struct.NullWideString.html  struct.PosValue.html  struct.ReadOptions.html  trait.BinRead.html  type.FilePtr8.html  (+6 more)
src/Xtreamly_Canister_backend/: Cargo.toml  Xtreamly_Canister_backend.did
src/Xtreamly_Canister_backend/src/: lib.rs
src/Xtreamly_Canister_backend/src/cryptography/: encryptor.rs
src/Xtreamly_Canister_backend/src/models/: entities.rs
src/Xtreamly_Canister_backend/src/utilities/: consts.rs  general.rs  mod.rs  rhia_delegation.rs  web3.rs
test/: test.py
(+16121 files in other folders)
