[package]
name = "Xtreamly_Canister_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.8.2"
sha2 = "0.10.6"
rhai = { version = "1.14.0", default-features = false, features = [ "no_time" ,"std" , "decimal" ] }
hex = "0.4.3"
ic-web3 = { git = "https://github.com/rocklabs-io/ic-web3" }
ic-cdk-macros = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.21.0"
serde_json = "1.0"
candid = "0.8"
ic-cdk = "0.7"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
